unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>TextArea</type>
</CustomField>