unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Close_Time__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Close_Time__c</fullName>
    <label>Close Time</label>
    <type>DateTime</type>
</CustomField>