unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Courier_Remarks__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Courier_Remarks__c</fullName>
    <label>Courier Remarks</label>
    <type>TextArea</type>
</CustomField>