unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Is_Residential__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Is Residential</label>
    <type>Checkbox</type>
</CustomField>