unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Pickup_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Pickup_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup Cancelled</label>
    <type>Checkbox</type>
</CustomField>