unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Preference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipmate Preference</label>
    <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
    <relationshipLabel>Pickups</relationshipLabel>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>