unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Ready_Time__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Ready_Time__c</fullName>
    <label>Ready Time</label>
    <type>DateTime</type>
</CustomField>