unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Service_Date__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Service_Date__c</fullName>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>