unpackaged/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Total_Taxes__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Total_Taxes__c</fullName>
    <label>Total Taxes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>